--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -727,11 +727,10 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </tr>
               <tr>
                 <th width="6%"  scope="row">1</th>
-                <td><div align=left> University of Arizona Steward Observatory                </div></td>
-              </tr>
-              <tr>
-                <th width="6%"  scope="row">2</th>
-                <td><div align=left> California University of Crocker Nuclear Lab                </div></td>
+                <td><div align=left> 
+                  <input name="startDate4222" type=text onchange="dataChanged()" value="University of Arizona Steward Observatory" size=50 id="startDate4222"/>
+                  <input name="image72" type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                </div></td>
               </tr>
             </table>
             
