--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -634,7 +634,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   </div></td>
                 <td class="infoline">
                   <div align="right">
-                    <input name="textfield" type="text" id="textfield" size="12">
+                    <input name="textfield" type="text" id="textfield" size="14">
                   </div></td>
                 <td nowrap><div align=center> <a href="#"><img src="../images/tinybutton-Add1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
@@ -643,7 +643,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align=left> University of Arizona Steward Observatory
                     <input name="image4" type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
                   </div></td>
-                <td><div align="right">$25,000.00</div></td>
+                <td><div align="right">
+                  <input name="textfield2" type="text" id="textfield2" size="14" value="$25,000.00">
+                  </div></td>
                 <td nowrap><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
@@ -651,7 +653,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><div align=left> California University of Crocker Nuclear Lab
                     <input name="image8" type="image" class="nobord" src="../images/book_open.png" alt="inquiry">
                   </div></td>
-                <td><div align="right">$75,825.00</div></td>
+                <td><div align="right">
+                  <input name="textfield3" type="text" id="textfield3" size="14" value="$75,825.00">
+                  </div></td>
                 <td nowrap><div align=center> <a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
@@ -868,7 +872,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         </div>
         <div align="right"><br>
           * required </div>
-        <div class="globalbuttons"> <a href="#"> </a> <img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
+        <div class="globalbuttons"> <a href="#"><img src="../images/buttonsmall_reload.gif" width="75" height="18" border="0"></a> <a href="#"><img src="../images/buttonsmall_save.gif" alt="save" width="53" height="18" hspace="5" border="0"></a><a href="#"></a><a href="#"><img src="../images/buttonsmall_close.gif" alt="cancel" width="48" height="18" hspace="5" border="0"></a><a href="#"><img src="../images/buttonsmall_cancel.gif" alt="cancel" width="66" height="18" hspace="5" border="0"></a> </div>
       </div></td>
     <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
   </tr>
