COI Module Work assigned by Lora
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6250 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-dev/coi-customdata.html
+++ b/kra-coi-dev/coi-customdata.html
@@ -74,6 +74,9 @@ function MM_goToURL() { //v3.0
 		<dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-notes.html');return document.MM_returnValue" value="Notes & Attachments">
         </span></dt>  
+		<dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-management.html');return document.MM_returnValue" value="COI Management">
+        </span></dt> 
    <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosureActions.html');return document.MM_returnValue" value="Disclosure Actions">
         </span></dt> 
