--- a/kra-coi-dev/coi-financialInterest.html
+++ b/kra-coi-dev/coi-financialInterest.html
@@ -85,6 +85,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 		<dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-notes.html');return document.MM_returnValue" value="Notes & Attachments">
         </span></dt>  
+		<dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-management.html');return document.MM_returnValue" value="COI Management">
+        </span></dt> 
    <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosureActions.html');return document.MM_returnValue" value="Disclosure Actions">
         </span></dt> 
