--- a/kra-coi-dev/coi-notes.html
+++ b/kra-coi-dev/coi-notes.html
@@ -54,7 +54,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <div id="tabs">
     <dl class="tabul">
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure Form">
         </span></dt>
 <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-financialInterest.html');return document.MM_returnValue" value="Financial Interests">
