--- a/kra-coi-dev/coi-permission.html
+++ b/kra-coi-dev/coi-permission.html
@@ -66,7 +66,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
     <div id="tabs">
       <dl class="tabul">
         <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure Form">
         </span></dt>
 <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-financialInterest.html');return document.MM_returnValue" value="Financial Interests">
@@ -118,7 +118,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           </span><span class="subhead-right"> <img src="../images/tinybutton-viewrights.gif" alt="view rights" width="67" height="15" onClick="MM_openBrWindow('prop-permissions-viewrights.html','','scrollbars=yes,resizable=yes,width=800,height=600')"></span></div>
           <table cellpadding=0 cellspacing="0"  summary="">
               <tr>
-                <th width="35%"><div align="right"> Disclosure Creator: </div></th>
+                <th width="35%"><div align="right"> Disclosure Aggregator: </div></th>
                 <td align=left valign=middle >Smith, Davicia P ; <span class="infocell">Beckford, Augustus O</span></td>
               </tr>
               <tr>
@@ -164,7 +164,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td class="infoline">&nbsp;</td>
                 <td class="infoline"><select name="select" id="select">
                     <option selected>unassigned</option>
-                    <option>Disclosure Creator</option>
+                    <option>Disclosure Aggregator</option>
                     <option>Disclosure Viewer</option>
                     <option>Financial Interest Viewer</option>
                 </select></td>
@@ -176,7 +176,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td><span class="infocell">Beckford, Augustus O</span></td>
                 <td align="right">165000</td>
                 <td>SB-SART</td>
-                <td>Disclosure Creator</td>
+                <td>Disclosure Aggregator </td>
                 <td nowrap><div align="center"><a href="#" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="delete" width=54 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
@@ -194,7 +194,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <td>Smith, Davicia P</td>
                 <td align="right">165000</td>
                 <td>Center for Environmental Health Sciences</td>
-                <td>Disclosure Creator</td>
+                <td>Disclosure Aggregator</td>
                 <td nowrap><div align="center"><a href="#" onClick="MM_openBrWindow('prop-permissions-roles.html','','scrollbars=yes,width=800,height=400')"><img src="../images/tinybutton-editrole.gif" alt="delete" width=54 height=15 hspace=3 vspace=3 border=0></a><a href="#"><img src="../images/tinybutton-delete1.gif" alt="delete" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
               </tr>
               <tr>
