--- a/kra-coi-dev/coi-disclosureActions.html
+++ b/kra-coi-dev/coi-disclosureActions.html
@@ -56,7 +56,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 
      <dt><span class="tabright">
         <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-disclosure.html');return document.MM_returnValue" value="Disclosure Form">
         </span></dt>
 <dt><span class="tabright">
         <input name="Submit" type="submit" onClick="MM_goToURL('parent','coi-financialInterest.html');return document.MM_returnValue" value="Financial Interests">
