[BFN] Updated tab links on all pages to be relative (no path).  Also added "Reporting Requirements" panel on the "Payment, Reports & Terms" page.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6259 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-bfn/aw-contacts.html
+++ b/kra-awa-bfn/aw-contacts.html
@@ -54,34 +54,34 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
   <div id="tabs">
     <dl class="tabul">
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-awards.html');return document.MM_returnValue" value="Award">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-awards.html');return document.MM_returnValue" value="Award">
         </span></dt>
       <dt class="licurrent" ><span class="tabright tabcurrent">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-contacts.html');return document.MM_returnValue" value="Contacts">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-contacts.html');return document.MM_returnValue" value="Contacts">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-time-money.html');return document.MM_returnValue" value="Time & Money ">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-time-money.html');return document.MM_returnValue" value="Time & Money ">
         </span></dt>
 	  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-payments-reports-terms.html');return document.MM_returnValue" value="Payment, Reports & Terms">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-payments-reports-terms.html');return document.MM_returnValue" value="Payment, Reports & Terms">
         </span></dt>
 	  <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-specialreview.html');return document.MM_returnValue" value="Special Review">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-specialreview.html');return document.MM_returnValue" value="Special Review">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-customdata.html');return document.MM_returnValue" value="Custom Data">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-customdata.html');return document.MM_returnValue" value="Custom Data">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-questions.html');return document.MM_returnValue" value="Questions">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-questions.html');return document.MM_returnValue" value="Questions">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-permissions.html');return document.MM_returnValue" value="Permissions">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-permissions.html');return document.MM_returnValue" value="Permissions">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-notes.html');return document.MM_returnValue" value="Comments &amp; Attachments">
         </span></dt>
       <dt><span class="tabright">
-        <input name="Submit" type="submit" onClick="MM_goToURL('parent','../kra-awa-dev/aw-actions.html');return document.MM_returnValue" value="Award Actions">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','aw-actions.html');return document.MM_returnValue" value="Award Actions">
         </span></dt>
     </dl>
   </div>
