git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6269 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/nestedtemplate.html
+++ b/BFN/nestedtemplate.html
@@ -241,7 +241,12 @@
                 	
                 </td>
                 <td style="background:url(./images/tabnav-inactive-2.gif); padding-top:8px;" valign="middle">
-                    <a href="#"><b>Lorem</b></a>
+                    <!--<a href="#"><b>Lorem</b></a>-->
+                    <!--<input type="button" value="Lorem Ipsum Ipsum">-->
+                    <!--<button>Lorem Ipsum Ipsum</button>-->
+                    <!--<input type="submit" name="methodToCall.headerTab.headerDispatch.save.navigateTo.customData.x" value="Custom Data" alt="Custom Data">-->
+                    <button type="submit" name="methodToCall.headerTab.headerDispatch.save.navigateTo.customData.x" value="Custom Data" alt="Custom Data">Custom Data</button>
+                    <input type="hidden" name="xyz" value="abc" />
                 </td>
                 <td style="background:url(./images/tabnav-inactive-3.gif);" width="17">&nbsp;
                 	
