{BFN} Nested Template Updates
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6274 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/nestedtemplate.html
+++ b/BFN/nestedtemplate.html
@@ -18,6 +18,10 @@
 #########################################################################################
 -->
 
+
+<!--
+<input type="submit" name="methodToCall.headerTab.headerDispatch.save.navigateTo.customData.x" value="Custom Data" alt="Custom Data">
+-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
