[BFN] KRAFUNC-59 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6279 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-payments-reports-terms.html
+++ b/kra-awa-dev/aw-payments-reports-terms.html
@@ -1790,17 +1790,20 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </tr>
                 <tr>
                   <th scope=row>1</th>
-                  <td>Super-Widget</td>
-                  <td>Widget R Us </td>
-                  <td><span class="infoline"> 12345 </span></td>
-                  <td><div align="right"><span class="infoline"> <a href="#"> </a>$25.73</span></div></td>
-                  <td><div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                  <td><input type="text" value="Super-Widget" name="pjo1" style="width:98%;" /></td>
+                  <td><input type="text" value="Widget R Us" name="pho1" style="width:98%;" /></td>
+                  <td><input type="text" value="12345" name="pfo1" style="width:98%;" /></td>
+                  <td><input type="text" value="$7,853.69" name="pgo1" style="width:98%;text-align:right;" /></td>
+                  <td style="text-align:center; width:120px;">
+                  	<a href="#"><img src="../images/tinybutton-update.gif" alt="update" width="48" height="15" border="0" /></a>
+                    <a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width="40" height="15" border="0" /></a>
+                  </td>
                 </tr>
                 <tr>
                   <th class="infoline" scope=row>Totals</th>
                   <td colspan="3" class="infoline">&nbsp;</td>
-                  <td class="infoline"><div align="right"><strong> $25.73</strong></div></td>
-                  <td class="infoline">&nbsp;</td>
+                  <td class="infoline"><div align="right"><strong>$7,853.69</strong></div></td>
+                  <td class="infoline" style="text-align:center"><a href="#"><img src="../images/tinybutton-recalculate.gif" alt="recalculate" width="72" height="15" border="0" /></a></td>
                 </tr>
               </tbody>
             </table>
@@ -1814,7 +1817,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <th scope=col>*Traveler Name </th>
                   <th scope=col>*Destination</th>
                   <th scope=col>*Start Date </th>
-                  <th scope=col>*End Date </th>
+                  <th scope=col>End Date </th>
                   <th scope=col>*Amount</th>
                   <th scope=col><div align=center>Actions</div></th>
                 </tr>
@@ -1824,17 +1827,17 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                     </div></th>
                   <td class="infoline"><div align="center">
                       <input type=text size=12 />
-                      <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup">
+                      <input type="image" class="nobord" src="../images/searchicon.gif" alt="lookup" align="top">
                     </div></td>
                   <td class="infoline"><div align="center">
                       <input name="startDate342" type=text onchange="dataChanged()" value="" size=12 />
                     </div></td>
                   <td class="infoline"><div align="center"><span>
                       <input name="date2" type=text size=12>
-                      </span><span><a href="#" onClick="cal.select(document.forms['example'].date1,'anchor1','MM/dd/yyyy'); return false;" name="anchor1" id="anchor"> <img src="../images/cal.gif" alt="select date" width=16 height=16 align=absmiddle></a></span></div></td>
+                      </span><span><a href="#" onClick="cal.select(document.forms['example'].date1,'anchor1','MM/dd/yyyy'); return false;" name="anchor1" id="anchor"> <img src="../images/cal.gif" alt="select date" width=16 height=16 align="top"></a></span></div></td>
                   <td class="infoline"><div align="center"><span>
                       <input name="date2" type=text size=12>
-                      </span><span><a href="#" onClick="cal.select(document.forms['example'].date1,'anchor1','MM/dd/yyyy'); return false;" name="anchor1" id="anchor"> <img src="../images/cal.gif" alt="select date" width=16 height=16 align=absmiddle></a></span></div></td>
+                      </span><span><a href="#" onClick="cal.select(document.forms['example'].date1,'anchor1','MM/dd/yyyy'); return false;" name="anchor1" id="anchor"> <img src="../images/cal.gif" alt="select date" width=16 height=16 align="top"></a></span></div></td>
                   <td class="infoline"><div align="right">
                       <input name="startDate343" type=text onchange="dataChanged()" value="" size=12 />
                     </div></td>
@@ -1842,27 +1845,33 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 </tr>
                 <tr>
                   <th scope=row>1</th>
-                  <td>Susan Mundt </td>
-                  <td>Detroit,Michigan</td>
-                  <td><div align="center"><span class="infoline"> 02/25/2008 </span></div></td>
-                  <td><div align="center"><span class="infoline"> 02/29/2008 </span></div></td>
-                  <td><div align="right"><span class="infoline"> $3,256.23 </span></div></td>
-                  <td><div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                  <td><input type="text" value="Susan Mundt" name="qw1" style="width:98%;" /></td>
+                  <td><input type="text" value="Detroit,Michigan" name="as1" style="width:98%;" /></td>
+                  <td><input type="text" value="02/25/2008" name="zx1" style="width:98%;" /></td>
+                  <td><input type="text" value="02/29/2008" name="er1" style="width:98%;" /></td>
+                  <td><input type="text" value="$3,256.23" name="df1" style="width:98%; text-align:right;" /></div></td>
+                  <td style="text-align:center; width:120px;">
+                  	<a href="#"><img src="../images/tinybutton-update.gif" alt="update" width="48" height="15" border="0" /></a>
+                    <a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width="40" height="15" border="0" /></a>
+                  </td>
                 </tr>
                 <tr>
                   <th scope=row>2</th>
-                  <td>Julia Wood </td>
-                  <td>Oahu,Hawaii</td>
-                  <td><div align="center"><span class="infoline"> 01/15/2008 </span></div></td>
-                  <td><div align="center"><span class="infoline"> 04/08/2008 </span></div></td>
-                  <td><div align="right"><span class="infoline">$5,823.45</span></div></td>
-                  <td><div align="center"><a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width=40 height=15 hspace=3 vspace=3 border=0></a></div></td>
+                  <td><input type="text" value="Julia Wood" name="qqw1" style="width:98%;" /></td>
+                  <td><input type="text" value="Oahu,Hawaii" name="qas1" style="width:98%;" /></td>
+                  <td><input type="text" value="01/15/2008" name="qzx1" style="width:98%;" /></td>
+                  <td><input type="text" value="04/08/2008" name="qer1" style="width:98%;" /></td>
+                  <td><input type="text" value="$5,823.45" name="qdf1" style="width:98%; text-align:right;" /></div></td>
+                  <td style="text-align:center;">
+                  	<a href="#"><img src="../images/tinybutton-update.gif" alt="update" width="48" height="15" border="0" /></a>
+                    <a href="#"><img src="../images/tinybutton-delete1.gif" alt="add" width="40" height="15" border="0" /></a>
+                  </td>
                 </tr>
                 <tr>
                   <th scope=row>Totals</th>
                   <td colspan="4" class="infoline">&nbsp;</td>
-                  <td class="infoline"><div align="right"><strong>$9079.68</strong></div></td>
-                  <td class="infoline">&nbsp;</td>
+                  <td class="infoline"><div align="right"><strong>$9,079.68</strong></div></td>
+                  <td class="infoline" style="text-align:center"><a href="#"><img src="../images/tinybutton-recalculate.gif" alt="recalculate" width="72" height="15" border="0" /></a></td>
                 </tr>
               </tbody>
             </table>
